--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -3,7 +3,7 @@ p8105_hw2_lk2776
 2024-09-30
 
 ``` r
-#load packages; print 3 lines of tibble output
+#load packages
 library(tidyverse)
 ```
 
@@ -45,16 +45,18 @@ nyc_data |> sapply(class)
     ##            route9           route10           route11 
     ##       "character"       "character"       "character"
 
-The cleaned NYC dataset contains the following variables: line,
-station_name, station_latitude, station_longitude, routes1-11, entry,
-vending, entrance_type, and ada. The cleaning process involved reading
-the data with missing values using na(), specifying columns route8-11 as
-character columns using col_types(), cleaning the column names with
+The cleaning process of NYC dataset involved reading the data with
+missing values using na(), specifying columns route8-11 as character
+columns using col_types(), cleaning the column names with
 janitor::clean_names(), selecting the desired columns with select(), and
 converting the entry variable using mutate() and ifelse() functions. The
-resulting dataset has the following number of rows and columns:
-**\[1,868 x 19\]** . The data is not tidy because routes1-11 can be put
-together in two columns: route_name and route_value.
+data is not tidy because routes1-11 can be put together in two columns:
+route_name and route_value. The resulting dataset has the following
+number of rows and columns: **\[1,868 x 19\]** . It contains the
+following variables: **line, station_name, station_latitude,
+station_longitude, entry, vending, entrance_type, ada, route1, route2,
+route3, route4, route5, route6, route7, route8, route9, route10,
+route11**
 
 - number of distinct stations in the dataset. :**465**
 
