--- a/p8105_hw2_lk2776.md
+++ b/p8105_hw2_lk2776.md
@@ -191,8 +191,8 @@ The number of rows and columns of prof. trash wheel dataset are: :
 The number of rows and columns of gywn. trash wheel dataset are: :
 **\[263 x 13\]**
 
-The number of rows and columns of the combined dataset are : **1033,
-15**
+The number of rows and columns of the combined dataset are : **\[1,033 x
+15\]**
 
 Column names of the combined trashwheel datasets are: **dumpster, month,
 year, date, weight_tons, volume_cubic_yards, plastic_bottles,
@@ -414,9 +414,9 @@ The variables of the final dataset are: **baker_name, baker, baker_age,
 baker_occupation, hometown, series, episode, signature_bake,
 show_stopper, technical, result**
 
-Following table showing the star baker or winnder from seasons 5 to 10.
-If a baker scored high on techical, they are more likely to win a star
-baker or winner.
+The following table shows the Star Baker or winner from seasons 5 to 10.
+If a baker scores high on technical, they are more likely to win Star
+Baker or be the overall winner.
 
 ``` r
 #create a table for starbaker/winner for each episode in season 5 to 10
